--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "dependencies": {
     "async": "^2.1.4",
     "byline": "^5.0.0",
+    "cloud-queue2": "0.0.3",
     "consign": "^0.1.2",
     "dynamodb": "^0.3.6",
-    "function-rate-limit": "^1.1.0",
-    "kafka-queue": "latest"
+    "function-rate-limit": "^1.1.0"
   }
 }
